--- a/miniprogram/pages/personal/changeShop/changeShop.wxml
+++ b/miniprogram/pages/personal/changeShop/changeShop.wxml
@@ -1,6 +1,77 @@
-<!--pages/personal/changeShop/changeShop.wxml-->
-<!-- 会员卡名称 -->
+<!-- 店铺名称 -->
 <view class="cu-form-group margin-top">
 	<view class="title">店铺名称</view>
-	<input value="{{shopName}}"></input>
+	<input bindinput="inputShopName" value="{{shopName}}"></input>
+</view>
+<!-- 上传logo -->
+<!-- 提示 -->
+<view class="cu-bar bg-white">
+	<view class="action">
+		上传店铺logo
+	</view>
+</view>
+<!-- 上传图片按钮 -->
+<view class="cu-form-group">
+	<view class="grid col-4 grid-square flex-sub">
+		<view class="bg-img" wx:if="{{shopLogo}}" wx:key="shopLogo" bindtap="ViewImage" data-url="{{shopLogo}}">
+			<image src='{{shopLogo}}' mode='aspectFill'></image>
+			<view class="cu-tag bg-red" catchtap="DelImg">
+				<text class="cuIcon-close"></text>
+			</view>
+		</view>
+		<view class="solids" bindtap="ChooseImage">
+			<text class="cuIcon-cameraadd"></text>
+		</view>
+	</view>
+</view>
+<!-- 商家类型 -->
+<view class="cu-form-group ">
+	<view class="title">商家类型</view>
+	<picker bindchange="shopTypePickerChange" value="{{shopTypeIndex}}" range="{{shopTypePicker}}">
+		<view class="picker">
+			{{shopType?shopType:'选择商家类型'}}
+		</view>
+	</picker>
+</view>
+<!-- 选择店铺地址 -->
+<view class="cu-form-group ">
+	<view class="title">详细地址</view>
+	<view class="picker" bindtap='getLocation'>
+		{{shopLocation?shopLocation:'点击选择地址'}}
+	</view>
+</view>
+<!-- 店铺电话 -->
+<view class="cu-form-group">
+	<view class="title">店铺电话</view>
+	<input bindinput="inputShopPhone" value="{{shopPhone}}"></input>
+</view>
+<!-- 商家介绍 -->
+<view class="cu-form-group align-start">
+	<view class="title">商家介绍</view>
+	<textarea maxlength="-1" bindinput="textareaBInput" value="请输入商家介绍" disabled="{{modelShopType}}"></textarea>
+</view>
+<!-- 提交按钮 -->
+<view class="flex flex-direction">
+	<button class="cu-btn bg-red margin-tb-sm lg">确定修改</button>
+</view>
+
+<!-- model -->
+<view class="cu-modal {{modelShopType?'show':''}}">
+	<view class="cu-dialog">
+		<view class="cu-bar bg-white justify-end">
+			<view class="content">自定义类型</view>
+			<view class="action" bindtap="hideModal">
+				<text class="cuIcon-close text-red"></text>
+			</view>
+		</view>
+		<view class="padding-xl">
+			<input placeholder="在此处输入自定义类型" bindinput="inputShopType"></input>
+		</view>
+		<view class="cu-bar bg-white justify-between">
+			<view class="action">
+				<button class="cu-btn line-green text-green" bindtap="hideModal">取消</button>
+				<button class="cu-btn bg-green margin-left" bindtap="addShopType">确定</button>
+			</view>
+		</view>
+	</view>
 </view>
