--- a/miniprogram/components/card/card.wxml
+++ b/miniprogram/components/card/card.wxml
@@ -1,12 +1,12 @@
 <view class="bg-gradual-blue padding radius shadow-blur" style="margin:10px">
 	<!-- 左侧logo -->
 	<view class="vipCard">
-		<view class="cu-avatar round " style="background-image:url({{card.logo}});"></view>
+		<view class="cu-avatar round " style="background-image:url({{card.cardLogo}});"></view>
 	</view>
 	<!-- 中间的会员卡信息 -->
 	<view class="" style="padding:6px; display:inline-block">
 		<view>
-			<view>{{card.bussinessName}}</view>
+			<view>{{card.store.storeUserName}}</view>
 			<view>{{card.cardName}}</view>
 			<view>开始日期： {{card.cardTimeStart}} </view>
 			<view>结束日期： {{card.cardTimeEnd}} </view>
@@ -16,8 +16,8 @@
 	<view class="fr">
 		<!-- 右侧会员卡标签 -->
 		<view class="tag" >
-			<block wx:for="{{card.cardTypeList}}" wx:key="cardTypeList">
-					<view class="cu-tag line-black flex-wrap " >{{item}}</view>
+			<block wx:for="{{card.cardTypes}}" wx:key="cardTypeList">
+					<view class="cu-tag line-black flex-wrap " >{{item.cardType}}</view>
 			</block>
 		</view>
 		<!-- 分享会员卡按钮 -->
