--- a/miniprogram/pages/admin/myCard/myCard.wxml
+++ b/miniprogram/pages/admin/myCard/myCard.wxml
@@ -28,7 +28,7 @@
 			<input type="text" placeholder="输入会员卡名称搜索会员卡" confirm-type="search"></input>
 		</view>
 		<view class="action">
-			<button class="cu-btn bg-green shadow-blur round" style="width:80px">搜索</button>
+			<button class="cu-btn bg-green shadow-blur round" style="width:80px"  bindtap="changeAdmin">搜索</button>
 		</view>
 	</view>
 	<!-- 创建会员卡 -->
