--- a/miniprogram/pages/user/personal/personal.wxml
+++ b/miniprogram/pages/user/personal/personal.wxml
@@ -26,10 +26,10 @@
 	<!-- <block wx:else>没有您的排队信息</block> -->
 	<view class="bg-white shadow-blur  align-end" style="margin-top:10px" wx:if="{{rankingNum!=''}}">
 		<view style="float:left;margin-top:10rpx">
-			<view class="cu-avatar round " style="background-image:url('https://7669-vipcard-3y6o1-1301438009.tcb.qcloud.la/image/google.png?sign=d24081f06d9b12f718953b0291f95c79&t=1585280719');margin-left:10px"></view>
+			<view class="cu-avatar round " style="background-image:url('{{store.storeLogo}}');margin-left:10px"></view>
 		</view>
 		<view style="padding:6px; display:inline-block">
-			<view>商家名称</view>
+			<view>商家名称：{{store.storeName}}</view>
 			<view>排队进度： 前边还有 {{rankingNum}} 人</view>
 		</view>
 		<button class="cu-btn lines-grey round sm shadow  fr" style="width:70px;margin-right:20px;margin-top:15px;" bindtap="cancel">放弃预约</button>
