--- a/miniprogram/pages/admin/personal/personal.wxss
+++ b/miniprogram/pages/admin/personal/personal.wxss
@@ -9,3 +9,11 @@
 .textLine {
   text-decoration: underline;
 }
+
+.pay {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  }
+/* 储值卡 */
+
